# Algorithms-and-Data-Structures

./: LICENSE  README.md
ads-task1-partition-alistkova-main/: README.md  partition.cpp
ads-task10-isbtree-alistkova-main/: CMakeLists.txt  README.md  isbtree.cpp
ads-task10-isbtree-alistkova-main/tests/: dump1.txt  dump10.txt  dump11.txt  dump12.txt  dump13.txt  dump14.txt  dump15.txt  dump16.txt  dump17.txt  dump18.txt  dump19.txt  dump2.txt  dump20.txt  dump21.txt  dump22.txt  dump23.txt  dump24.txt  dump25.txt  dump3.txt  dump4.txt  dump5.txt  dump6.txt  dump7.txt  dump8.txt  dump9.txt
ads-task11-hash-hash-alistkova-main/: CMakeLists.txt  README.md  hash-hash.cpp  output.txt
ads-task12-priorityqueue-alistkova-main/: CMakeLists.txt  README.md  priorityqueue.cpp
ads-task13-MST-alistkova-main/: CMakeLists.txt  README.md  mst.cpp
ads-task14-catch-me-alistkova-main/: CMakeLists.txt  README.md  findsubstr.cpp
ads-task2-battle-alistkova-main/: CMakeLists.txt  README.md  battle.cpp
ads-task3-minmax-alistkova-main/: CMakeLists.txt  README.md  minmaxqueue.cpp
ads-task3-minmax-alistkova-main/tests/in/: input1.txt  input2.txt  input3.txt  input4.txt  input5.txt  input6.txt  input7.txt  input8.txt  input9.txt
ads-task4-median-alistkova-main/: CMakeLists.txt  README.md  median.cpp
ads-task5-crossings-alistkova-main/: CMakeLists.txt  README.md  crossings.cpp
ads-task6-kth-alistkova-main/: CMakeLists.txt  README.md  kth.cpp
ads-task7-kth-huge-array-alistkova-main/: README.md  kth.cpp
ads-task9-aa-tree-alistkova-main/: CMakeLists.txt  README.md  aatree.cpp
(+88 files in other folders)
